# brain

./: .gitignore  client.ts  controlWorker.cjs  go.mod  go.sum  gui.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  worker.ts  wrangler.jsonc
.devcontainer/: devcontainer.json
cmd/gtkclient/: main.go  socket_client.go
cmd/gtkclient-rs/: Cargo.toml  icons.toml
cmd/gtkclient-rs/src/: main.rs  socket_client.rs
cmd/slintclient/: Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
cmd/slintclient/src/: lib.rs  main.rs
cmd/slintclient/ui/: app.slint
cmd/slintclient/web/: client.ts  main.ts
cmd/webui/: build-deploy.cjs  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  wrangler.toml
cmd/webui/src/: client.ts  main.ts  style.css
