[package]
name = "gtkclient-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
relm4 = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "1.0"
