[package]
name = "slintclient"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.5", features = ["backend-qt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "1.0"
rfd = "0.14"

[build-dependencies]
slint-build = "1.5"
