[package]
name = "slintclient"
version = "0.1.0"
edition = "2021"

[lib]
name = "slintclient"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
thiserror = "1.0"

[build-dependencies]
slint-build = "1.5"

# Target-specific adjustments for WebAssembly (no native winit backend)
[target.'cfg(target_arch = "wasm32")'.dependencies]
slint = { version = "1.5" }
wasm-bindgen = "0.2"
url = { version = "2.5", default-features = false }
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
slint = { version = "1.5", features = ["backend-winit"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rfd = "0.14"
